styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  text-decoration: none;
  border: none;
  outline: none;
  scroll-behavior: smooth;
  font-family: "Roboto", sans-serif;
  font-weight: 700;
  font-style: normal;
}

:root {
  --bg: #e0d6b5c9;
  --bg-2: #ffffff;
  --text: white;
  --main: black;
}

html {
  font-size: 60%;
  overflow-x: hidden;
}

body {
  background: var(--bg);
  color: var(--text);
}

.header { 
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  padding: 4rem 12% 4rem;
  background: rgba(0, 0, 0, 0.3);
  backdrop-filter: blur(10px);
  display: flex;
  justify-content: space-between;
  align-items: center;
  z-index: 5;
}

.logo {
  font-size: 3rem;
  font-family: "Dancing Script", cursive;
  color: var(--text);
  font-weight: 800;
  cursor: pointer;
  transition: 0.3s ease;
}

.logo:hover {
  transform: scale(1.1);
}

.logo span {
  font-family: "Dancing Script", cursive;
  text-shadow: 0 0 25px var(--main);
}

.navbar a {
  font-size: 1.8rem;
  color: var(--text);
  margin-left: 4rem;
  font-weight: 500;
  transition: 0.3s ease;
  border-bottom: 3px solid transparent;
}

.navbar a:hover,
.navbar a.active {
  color: var(--main);
  border-bottom: 3px solid var(--main);
}

#menu-icon {
  font-size: 3.6rem;
  color: var(--main);
  display: none;
}

section {
  min-height: 100vh;
  padding: 10rem 12% 10rem;
}

.home {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 15rem;
}

.home-content {
  display: flex;
  flex-direction: column;
  align-items: baseline;
  text-align: left;
  justify-content: center;
  margin-top: 3rem;
  color: black;
}

span {
  color: var(--main);
}

.logo span {
  color: var(--main);
}

.home-content h3 {
  margin-bottom: 2rem;
  margin-top: 2rem;
  font-size: 3.5rem;
}

.home-content h1 {
  font-size: 7rem;
  font-weight: 700;
  margin-top: 1.5rem;
  line-height: 1;
}

.home-content p {
  font-size: 2rem;
  font-weight: 500;
  line-height: 1.8;
  max-width: 1000px;
}

.home-img {
  border-radius: 50%;
}

.home-img img {
  position: relative;
  top: 3rem;
  width: 32vw;
  border-radius: 50%;
  box-shadow: 0 0 25px var(--main);
  cursor: pointer;
  transition: 0.4s ease-in-out;
}

.home-img img:hover {
  box-shadow: 0 0 25px var(--main),
              0 0 50px var(--main),
              0 0 100px var(--main);
}

.home-buttons {
  display: flex;
}

.social-icons a {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  width: 4.5rem;
  height: 4.5rem;
  background: transparent;
  border: 2px solid var(--main);
  font-size: 2.5rem;
  border-radius: 50%;
  color: var(--main);
  margin: 3rem 1.5rem 3rem 0;
  transition: 0.3s ease-in-out;
}

.social-icons a:hover {
  color: var(--text);
  transform: scale(1.3)translateY(-5px);
  box-shadow: 0 0 25px var(--main);
  background: var(--main);
}

.btn {
  display: inline-block;
  padding: 1rem 2.8rem;
  box-shadow: 0 0 25px var(--main);
  border-radius: 4rem;
  font-size: 1.6rem;
  border: 2px solid transparent;
  letter-spacing: 0.1rem;
  font-weight: 600;
  transition: 0.3s ease-in-out;
  cursor: pointer;
}

.btn:hover {
  transform: scale(1.05);
  box-shadow: 0 0 50px var(--main)
}

.btn-group {
  display: flex;
  align-items: center;
  gap: 1.5rem;
}

.btn-group a {
  color: var(--main);
  border: 2px solid var(--main);
  box-shadow: 0 0 25px transparent;
}

.btn-group a:hover {
  box-shadow: 0 0 25px var(--main);
  background: var(--main);
  color: white;
}

.heading {
  font-size: 8rem;
  text-align: center;
  margin: 5rem 0;
}

::-webkit-scrollbar {
  width: 15px;
}

::-webkit-scrollbar-thumb {
  background: var(--main);
}

::-webkit-scrollbar-track {
  background: var(--bg);
  width: 50px;
}

.projects {
  background: var(--bg);
  color: black;
}

.projects h2 {
  margin-bottom: 5rem;
  color: white;
}

.projects-container {
  display: flex;
  flex-direction: column;
  /* display: grid; */
  /* grid-template-columns: auto 1fr; */
  align-items: center;
  gap: 2.5rem;
}

.projects-container img {
  height: 300px;
  border-radius: 3rem;
  cursor: pointer;
  transition: 0.4s ease-in-out;
}

.projects-container img:hover {
  transform: scale(1.03);
}

.project-card {
  background: white;
  height: 600px;
  max-width: 500px;
  border-radius: 3rem;
  border: 5px solid transparent;
  cursor: pointer;
  align-items: center;
  transition: 0.4s ease-in-out;
}

.project-card:hover {
  color: black;
  border: 5px solid white;
  transform: scale(1.03);
}

.project-card .project-info {
  display: flex;
  flex-direction: column;
  padding: 3rem 5rem;
} 

.project-info img {
  height: 100px;
  padding-top: 20px;
  padding-bottom: 30px;
}


.project-info p {
  font-size: 1.6rem;
  font-weight: 600;
  max-height: 100px;
  line-height: 1.7;
  margin: auto;
}

.project-length {
  display: flex;
  gap: 5px;
  align-items: center;
  font-size: 1.6rem;
  padding-bottom: 20px
}

.contact {
  background: var(--bg);
}

.contact h2 {
  margin-bottom: 3rem;
  color: white;
}

.footer {
  position: relative;
  bottom: 0;
  width: 100%;
  padding: 40px 0;
}

.info {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 2rem;
  font-size: larger;
}

.footer .social {
  display: flex;
  flex-direction: column;
  text-align: center;
  padding-bottom: 25px;
  color: var(--main);
  gap: 2rem;
}

.footer .social a {
  font-size: 25px;
  color: var(--main);
  border: 2px solid var(--main);
  width: 42px;
  height: 42px;
  line-height: 42px;
  display: inline-block;
  text-align: center;
  border-radius: 50%;
  transition: 0.3s ease-in-out;
}

.footer .social a:hover {
  color: var(--text);
  transform: scale(1.3)translateY(-5px);
  box-shadow: 0 0 25px var(--main);
  background: var(--main);
}

.footer .copyright {
  text-align: center;
  font-size: 16px;
  color: black;
}

@media (max-width: 1285px) {
  html {
    font-size: 55%;
  }
}

@media (max-width: 991px) {
  header {
    padding: 2rem 3%;
  }

  section {
    padding: 10rem 3% 2rem;
  }

  .footer {
    padding: 2rem 3%;
  }
}

@media (max-width: 895px) {
  #menu-icon {
    display: block;
  }

  .navbar {
    position: absolute;
    top: 100%;
    right: 0;
    width: 50%;
    padding: 1rem 3%;
    background: rgba(0, 0, 0, 0.8);
    backdrop-filter: blur(20px);
    border-bottom-left-radius: 2rem;
    border-left: 2px solid var(--main);
    border-bottom: 2px solid var(--main);
    display: none;
  }

  .navbar.active {
    display: block;
  }

  .navbar a {
    display: block;
    font-size: 2rem;
    margin: 3rem 0;
    color: white;
  }

  .home {
    flex-direction: column-reverse;
    margin: 5rem 4rem;
  }

  .home-content h3 {
    font-size: 2.6rem;
  }

  .home-content h1 {
    font-size: 8rem;
    margin-top: 3rem;
  }

  .home-content p {
    max-width: 600px;
  }

  .home-img img {
    width: 56vw;
  }
}

